--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
+    "reactotron-react-js": "^3.3.7",
     "sequelize": "^5.21.3",
     "youch": "^2.0.10",
     "yup": "^0.28.1"
